...
        } = this.state;

        return (
            <View style={styles.container}>
                {/* 内容和语言选择Modal */}
                <ChoiceModal
                    testID={'publisher_modal_typechoice'}
                    visible={typeChoiceModalVisible}
                    choiceList={typeChoiceList}
                    choiceIndex={typeChoiceIndex}
                    onRequestClose={this._onRequestClose}
                    onSelectedTypeChanged={this._onSelectedTypeChanged}/>
                <View style={[styles.container, {flexDirection: 'column', backgroundColor: 'white'}]}>
                    {/* 标题栏 */}
                    <Toolbar testID={'publisher_toolbar'} title={toolbarTitle} actions={toolbarActions}
                             isSearch={toolBarIsSearch} onActionSelected={this._onActionSelected}
                             onPressBack={this._onPressBack}/>
                    {/* 发布者列表 */}
                    <FlatList
                        testID={'publisher_flatlist_publisherlist'}
                        data={showPublisherList}
                        renderItem={this._renderPublisherItem}
                        keyExtractor={(item, index) => index.toString()}
                        refreshing={publisherListRefresh}
                        onRefresh={this._onRefresh}/>
                </View>
...
